Fix macro to turn on/off GPU aware MPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ target_compile_definitions(muMatScale PRIVATE NUC_SEP)
 target_compile_definitions(muMatScale PRIVATE EBUG=0)
 
 set(BUILD_FOR_GPU FALSE CACHE BOOL "Whether to build for GPU")
+set(BUILD_WITH_GPU_AWARE_MPI FALSE CACHE BOOL "Whether to use GPU-aware MPI")
 if(${BUILD_FOR_GPU})
     if(OpenMP_C_VERSION LESS "4.5")
         message(SEND_ERROR "Requires OpenMP4.5 or newer for GPU offload")
@@ -85,8 +86,9 @@ if(${BUILD_FOR_GPU})
     target_compile_definitions(muMatScale PRIVATE GPU_PACK)
     target_compile_definitions(muMatScale PRIVATE GPU_OMP_NUC)
     target_link_libraries(muMatScale PRIVATE ${EXTRA_OpenMP_C_FLAGS})
-else(${BUILD_FOR_GPU})
-	target_compile_definitions(muMatScale PRIVATE CPU_MPI)
+    if(NOT ${BUILD_WITH_GPU_AWARE_MPI})
+        target_compile_definitions(muMatScale PRIVATE CPU_MPI)
+    endif()
 endif()
 
 enable_testing()
